Changed the Portfolio page Navigation menu to make it more compact and avoid overflowing on some screens

--- a/src/components/sass/layout/_navigation.scss
+++ b/src/components/sass/layout/_navigation.scss
@@ -162,7 +162,7 @@
   }
 
   &__item {
-    margin: 1rem;
+    margin: .5rem;
   }
 
   &__link {
@@ -170,8 +170,8 @@
     &:visited {
       @include hide-backface;
       display: inline-block;
-      padding: .8rem 1.5rem;
-      font-size: 2.5rem;
+      padding: .7rem 1.3rem;
+      font-size: 2rem;
       font-weight: 300;
       color: $secondaryFont;
       text-transform: uppercase;
